Bug 358674 - Plan crashing when closing window
Summary: Plan crashing when closing window
Status: RESOLVED FIXED
Alias: None
Product: calligraplan
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.9.10
Platform: Chakra Linux
: NOR crash
Target Milestone: ---
Assignee: Friedrich W. H. Kossebau
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2016-01-28 10:30 UTC by Louvet
Modified: 2016-12-20 08:44 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Louvet 2016-01-28 10:30:25 UTC
Application: calligraplan (2.9.10)
KDE Platform Version: 4.14.16
Qt Version: 4.8.7
Operating System: Linux 4.2.6-1-CHAKRA x86_64
Distribution: "Chakra"

-- Information about the crash:
- What I was doing when the application crashed: opened a second window of plan, modified a project in the new window and didn't save it, tried to close the first window and it crashed.

-- Backtrace:
Application: Plan (calligraplan), signal: Segmentation fault
Using host libthread_db library "/usr/lib/libthread_db.so.1".
[Current thread is 1 (Thread 0x7ff2a3cb4840 (LWP 3322))]

Thread 3 (Thread 0x7ff27a115700 (LWP 3341)):
#0  0x00007ff29e9ae2fd in g_ptr_array_set_size () at /usr/lib/libglib-2.0.so.0
#1  0x00007ff29e9d9181 in g_main_context_prepare () at /usr/lib/libglib-2.0.so.0
#2  0x00007ff29e9d9bcb in  () at /usr/lib/libglib-2.0.so.0
#3  0x00007ff29e9d9dbc in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#4  0x00007ff2a1dec2de in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQtCore.so.4
#5  0x00007ff2a1dbbd71 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQtCore.so.4
#6  0x00007ff2a1dbc0d5 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQtCore.so.4
#7  0x00007ff2a1cb0889 in QThread::exec() () at /usr/lib/libQtCore.so.4
#8  0x00007ff2a1d9c7c3 in  () at /usr/lib/libQtCore.so.4
#9  0x00007ff2a1cb31ef in  () at /usr/lib/libQtCore.so.4
#10 0x00007ff29eca5464 in start_thread () at /usr/lib/libpthread.so.0
#11 0x00007ff2a36e012d in clone () at /usr/lib/libc.so.6

Thread 2 (Thread 0x7ff279914700 (LWP 3369)):
#0  0x00007ff29ecab03f in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007ff286e0881a in  () at /usr/lib/libQtScript.so.4
#2  0x00007ff286e08849 in  () at /usr/lib/libQtScript.so.4
#3  0x00007ff29eca5464 in start_thread () at /usr/lib/libpthread.so.0
#4  0x00007ff2a36e012d in clone () at /usr/lib/libc.so.6

Thread 1 (Thread 0x7ff2a3cb4840 (LWP 3322)):
[KCrash Handler]
#6  0x0000000000000021 in  ()
#7  0x00007ff28b8e2b05 in KPlato::ResourceGroupRequest::deleteResourceRequest(KPlato::ResourceRequest*) (this=0x1ff5c70, request=0x1a2e430) at /chakra/desktop/calligra/src/calligra-2.9.10/plan/libs/kernel/kptresource.cpp:2070
#8  0x00007ff28b8e3173 in KPlato::Resource::removeRequests() (this=this@entry=0x1ff61d0) at /chakra/desktop/calligra/src/calligra-2.9.10/plan/libs/kernel/kptresource.cpp:370
#9  0x00007ff28b8eb094 in KPlato::Resource::~Resource() (this=0x1ff61d0, __in_chrg=<optimized out>) at /chakra/desktop/calligra/src/calligra-2.9.10/plan/libs/kernel/kptresource.cpp:357
#10 0x00007ff28b8eb3a9 in KPlato::Resource::~Resource() (this=0x1ff61d0, __in_chrg=<optimized out>) at /chakra/desktop/calligra/src/calligra-2.9.10/plan/libs/kernel/kptresource.cpp:365
#11 0x00007ff28b8df3ba in KPlato::ResourceGroup::~ResourceGroup() (this=0x1ed7480, __in_chrg=<optimized out>) at /chakra/desktop/calligra/src/calligra-2.9.10/plan/libs/kernel/kptresource.cpp:66
#12 0x00007ff28b8df479 in KPlato::ResourceGroup::~ResourceGroup() (this=0x1ed7480, __in_chrg=<optimized out>) at /chakra/desktop/calligra/src/calligra-2.9.10/plan/libs/kernel/kptresource.cpp:69
#13 0x00007ff28b936e16 in KPlato::RemoveResourceGroupCmd::~RemoveResourceGroupCmd() (this=0x342f500, __in_chrg=<optimized out>) at /chakra/desktop/calligra/src/calligra-2.9.10/plan/libs/kernel/kptcommand.cpp:1842
#14 0x00007ff28b936e59 in KPlato::RemoveResourceGroupCmd::~RemoveResourceGroupCmd() (this=0x342f500, __in_chrg=<optimized out>) at /chakra/desktop/calligra/src/calligra-2.9.10/plan/libs/kernel/kptcommand.cpp:1843
#15 0x00007ff29f9fb616 in KUndo2QStack::clear() () at /usr/lib/libkundo2.so.14
#16 0x00007ff2a335a3fd in KoMainWindow::setRootDocument(KoDocument*, KoPart*, bool) () at /usr/lib/libkomain.so.14
#17 0x00007ff2a335e0fa in KoMainWindow::closeEvent(QCloseEvent*) () at /usr/lib/libkomain.so.14
#18 0x00007ff2a2837098 in QWidget::event(QEvent*) () at /usr/lib/libQtGui.so.4
#19 0x00007ff2a2bf38d3 in QMainWindow::event(QEvent*) () at /usr/lib/libQtGui.so.4
#20 0x00007ff29f6aa189 in KXmlGuiWindow::event(QEvent*) () at /usr/lib/libkdeui.so.5
#21 0x00007ff2a27e101c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/lib/libQtGui.so.4
#22 0x00007ff2a27e7a68 in QApplication::notify(QObject*, QEvent*) () at /usr/lib/libQtGui.so.4
#23 0x00007ff2a333a195 in KoApplication::notify(QObject*, QEvent*) () at /usr/lib/libkomain.so.14
#24 0x00007ff2a1dbd21d in QCoreApplication::notifyInternal(QObject*, QEvent*) () at /usr/lib/libQtCore.so.4
#25 0x00007ff2a28338f1 in QWidgetPrivate::close_helper(QWidgetPrivate::CloseMode) () at /usr/lib/libQtGui.so.4
#26 0x00007ff2a2852bb6 in QApplication::x11ClientMessage(QWidget*, _XEvent*, bool) () at /usr/lib/libQtGui.so.4
#27 0x00007ff2a285fb35 in QApplication::x11ProcessEvent(_XEvent*) () at /usr/lib/libQtGui.so.4
#28 0x00007ff2a2887aa2 in  () at /usr/lib/libQtGui.so.4
#29 0x00007ff29e9d9a1d in g_main_context_dispatch () at /usr/lib/libglib-2.0.so.0
#30 0x00007ff29e9d9d08 in  () at /usr/lib/libglib-2.0.so.0
#31 0x00007ff29e9d9dbc in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#32 0x00007ff2a1dec2be in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQtCore.so.4
#33 0x00007ff2a2887b66 in  () at /usr/lib/libQtGui.so.4
#34 0x00007ff2a1dbbd71 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQtCore.so.4
#35 0x00007ff2a1dbc0d5 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQtCore.so.4
#36 0x00007ff2a1dc1667 in QCoreApplication::exec() () at /usr/lib/libQtCore.so.4
#37 0x00007ff2a399ca05 in kdemain(int, char**) (argc=<optimized out>, argv=<optimized out>) at /chakra/desktop/calligra/src/calligra-2.9.10/plan/main.cpp:72
#38 0x00007ff2a3617610 in __libc_start_main () at /usr/lib/libc.so.6
#39 0x0000000000400739 in _start ()

Reported using DrKonqi
Comment 1 Dag Andersen 2016-08-26 11:16:20 UTC
Git commit 2651c38a87304de98d05c1abc2aa85d227782a4d by Dag Andersen.
Committed on 26/08/2016 at 11:11.
Pushed by danders into branch 'master'.

Plan: fix potentional crash in resource request debug statement

M  +11   -2    plan/libs/kernel/kptresource.cpp

http://commits.kde.org/calligra/2651c38a87304de98d05c1abc2aa85d227782a4d