Plan: fix potentional crash in resource request debug statement

BUG:358674